Setup Logs Adapter

--- a/app/src/main/res/layout/refuel_log_item.xml
+++ b/app/src/main/res/layout/refuel_log_item.xml
@@ -45,29 +45,31 @@
         </TextView>
 
         <TextView
-            android:id="@+id/distance_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/tv_item_refuel_main_info"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintStart_toEndOf="@id/tv_refuel"
+            app:layout_constraintTop_toTopOf="@id/tv_refuel"
+            app:layout_constraintBottom_toBottomOf="@id/tv_refuel"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="@dimen/margin_small"
             android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            app:layout_constraintBottom_toTopOf="@id/fuel_amount_value"
-            app:layout_constraintStart_toEndOf="@+id/view_last_refuel_km"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="3465">
+            android:textSize="@dimen/text_size_regular"
+            android:text="@string/refuel_message">
 
         </TextView>
 
         <TextView
-            android:id="@+id/tv_distance_unit"
+            android:id="@+id/tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintBottom_toBottomOf="@+id/distance_value"
-            app:layout_constraintStart_toEndOf="@+id/distance_value"
-            tools:text="km">
+            app:layout_constraintBottom_toTopOf="@id/tv_fuel_amount"
+            app:layout_constraintStart_toEndOf="@+id/view_last_refuel_km"
+            app:layout_constraintTop_toBottomOf="@id/tv_item_refuel_main_info"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="3465">
 
         </TextView>
 
@@ -76,36 +78,23 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:background="@color/md_theme_light_distance_data_color"
-            app:layout_constraintBottom_toBottomOf="@id/distance_value"
-            app:layout_constraintEnd_toStartOf="@id/distance_value"
+            app:layout_constraintBottom_toBottomOf="@id/tv_distance"
+            app:layout_constraintEnd_toStartOf="@id/tv_distance"
             app:layout_constraintStart_toStartOf="@+id/guideline_center"
-            app:layout_constraintTop_toTopOf="@id/distance_value">
+            app:layout_constraintTop_toTopOf="@id/tv_distance">
 
         </View>
 
         <TextView
-            android:id="@+id/fuel_amount_value"
+            android:id="@+id/tv_fuel_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            app:layout_constraintBottom_toTopOf="@id/payment_value"
+            app:layout_constraintBottom_toTopOf="@id/tv_payment"
             app:layout_constraintStart_toEndOf="@+id/view_fuel_amount"
-            app:layout_constraintTop_toBottomOf="@id/distance_value"
+            app:layout_constraintTop_toBottomOf="@id/tv_distance"
             tools:text="25">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/tv_fuel_amount_unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintBottom_toBottomOf="@+id/fuel_amount_value"
-            app:layout_constraintStart_toEndOf="@+id/fuel_amount_value"
-            tools:text="l">
 
         </TextView>
 
@@ -115,35 +104,22 @@
             android:layout_height="16dp"
             android:layout_marginEnd="@dimen/margin_small"
             android:background="@color/md_theme_light_fuel_amount_data_color"
-            app:layout_constraintBottom_toBottomOf="@id/fuel_amount_value"
+            app:layout_constraintBottom_toBottomOf="@id/tv_fuel_amount"
             app:layout_constraintStart_toStartOf="@id/guideline_center"
-            app:layout_constraintTop_toTopOf="@id/fuel_amount_value">
+            app:layout_constraintTop_toTopOf="@id/tv_fuel_amount">
 
         </View>
 
         <TextView
-            android:id="@+id/payment_value"
+            android:id="@+id/tv_payment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            app:layout_constraintBottom_toTopOf="@id/fuel_price_per_unit_value"
+            app:layout_constraintBottom_toTopOf="@id/tv_fuel_price_per_unit"
             app:layout_constraintStart_toEndOf="@+id/view_refuel_payment"
-            app:layout_constraintTop_toBottomOf="@id/fuel_amount_value"
+            app:layout_constraintTop_toBottomOf="@id/tv_fuel_amount"
             tools:text="68">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/tv_payment_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintBottom_toBottomOf="@+id/payment_value"
-            app:layout_constraintStart_toEndOf="@+id/payment_value"
-            tools:text="PLN">
 
         </TextView>
 
@@ -153,35 +129,22 @@
             android:layout_height="16dp"
             android:layout_marginEnd="@dimen/margin_small"
             android:background="@color/md_theme_light_payments_data_color"
-            app:layout_constraintBottom_toBottomOf="@id/payment_value"
+            app:layout_constraintBottom_toBottomOf="@id/tv_payment"
             app:layout_constraintStart_toStartOf="@id/guideline_center"
-            app:layout_constraintTop_toTopOf="@id/payment_value">
+            app:layout_constraintTop_toTopOf="@id/tv_payment">
 
         </View>
 
         <TextView
-            android:id="@+id/fuel_price_per_unit_value"
+            android:id="@+id/tv_fuel_price_per_unit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_small"
             android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_fuel_price"
-            app:layout_constraintTop_toBottomOf="@id/payment_value"
+            app:layout_constraintTop_toBottomOf="@id/tv_payment"
             tools:text="6.24">
-
-        </TextView>
-
-        <TextView
-            android:id="@+id/tv_fuel_price_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:textAppearance="@style/Redrive.App.TextAppearance.Regular"
-            android:textColor="?attr/colorOnSurface"
-            app:layout_constraintBottom_toBottomOf="@+id/fuel_price_per_unit_value"
-            app:layout_constraintStart_toEndOf="@+id/fuel_price_per_unit_value"
-            tools:text="PLN">
 
         </TextView>
 
@@ -191,18 +154,19 @@
             android:layout_height="16dp"
             android:layout_marginEnd="@dimen/margin_small"
             android:background="@color/md_theme_light_fuel_price_data_color"
-            app:layout_constraintBottom_toBottomOf="@id/fuel_price_per_unit_value"
+            app:layout_constraintBottom_toBottomOf="@id/tv_fuel_price_per_unit"
             app:layout_constraintStart_toStartOf="@id/guideline_center"
-            app:layout_constraintTop_toTopOf="@id/fuel_price_per_unit_value">
+            app:layout_constraintTop_toTopOf="@id/tv_fuel_price_per_unit">
 
         </View>
 
         <TextView
-            android:id="@+id/tv_avg_consumption_value"
+            android:id="@+id/tv_avg_consumption"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_large"
             android:textAppearance="@style/Redrive.App.TextAppearance.Large"
+            android:textColor="?attr/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/view_fuel_amount"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,8 +181,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_large"
             android:textAppearance="@style/Redrive.App.TextAppearance.Small"
-            app:layout_constraintEnd_toEndOf="@+id/tv_avg_consumption_value"
-            app:layout_constraintTop_toBottomOf="@+id/tv_avg_consumption_value"
+            android:textColor="?attr/colorPrimary"
+            app:layout_constraintEnd_toEndOf="@+id/tv_avg_consumption"
+            app:layout_constraintTop_toBottomOf="@+id/tv_avg_consumption"
             tools:text="l/100km">
 
         </TextView>
