--- a/app/src/main/res/layout/fragment_refuel.xml
+++ b/app/src/main/res/layout/fragment_refuel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.redrive.presentation.refuel.RefuelFragment">
+    tools:context="com.example.redrive.presentation.refuelFeature.refuel.RefuelFragment">
 
 
     <com.google.android.material.card.MaterialCardView
