--- a/app/src/main/res/navigation/vehicle_flow.xml
+++ b/app/src/main/res/navigation/vehicle_flow.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/vehiclesFragment"
-        android:name="com.example.redrive.presentation.vehicle.vehicles.VehiclesFragment"
+        android:name="com.example.redrive.presentation.vehicles.VehiclesFragment"
         android:label="@string/vehicles"
         tools:layout="@layout/fragment_vehicles">
         <action
@@ -23,7 +23,7 @@
         android:id="@+id/editVehicleFragment"
         android:name="com.example.redrive.presentation.vehicle.editVehicle.EditVehicleFragment"
         android:label="@string/edit_vehicle"
-        tools:layout="@layout/fragment_edit_vehicle" >
+        tools:layout="@layout/fragment_vehicle" >
         <argument
             android:name="editedVehicle"
             app:argType="com.example.domain.model.Vehicle" />
@@ -32,5 +32,5 @@
         android:id="@+id/newVehicleFragment"
         android:name="com.example.redrive.presentation.vehicle.newVehicle.NewVehicleFragment"
         android:label="@string/new_vehicle_fragment"
-        tools:layout="@layout/fragment_new_vehicle" />
+        tools:layout="@layout/fragment_vehicle" />
 </navigation>
